# MemoryBridge

./: .deploy-trigger  .dockerignore  .gitignore  =4.1.0  CAPABILITIES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMUNITY.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  ROADMAP.md  RUN.md  SECURITY.md  SHOWCASE.md  UX_AUDIT_COMPLETE.md  _test_import.py  _verify_import.py  check_import.py  docker-compose.yml  memory-bridge-concept.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  railway.toml  run.sh  setup.cfg  smoke_test.sh  turbo.json  vercel.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01-nova-dream.yml  02-rex-concern.yml  03-henry-improvement.yml  04-fred-ship.yml  05-bud-orchestrate.yml  config.yml
.github/workflows/: ci.yml
.hermes/: rex-audit-report.md
.hermes/plans/: auth-to-subscription-data-flow.md  auth-ux-vision.md  sprint-wrap-plan.md  v0.3-hardening-plan.md  v0.4-production-plan.md  v0.5-integration-plan.md  v0.6-multi-user-plan.md
.hermes/scripts/: monitor_fixes.py
apps/web/: .env.example  next.config.ts  package.json  (+2 more)
docs/: architecture.md  auth-flow-fix.md  auth-flow-redesign.md  auth-workflow-redesign.md  deploy-checklist.md  deployment.md  framework-adapters.md  next-gen-plan.md  nova-auth-ux-vision.md  saas-architecture.md  saas-execution-plan.md
scripts/: fix_faq.py  fix_pages.py  refactor_auth.py  security_scan.py  seed_demo_data.py
tests/: test_acl.py  test_client.py  test_handoff.py  test_models.py  test_scratchpad.py  test_server.py  test_storage.py  test_webhooks.py
(+147 files in other folders)
