[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-bridge"
version = "0.2.0"
description = "Cross-session memory persistence for multi-agent teams"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0",
    "aiosqlite>=0.19.0",
    "prometheus-client>=0.19.0",
    "bcrypt>=4.1.0",
    "asyncpg>=0.29.0",
    "pydantic-settings>=2.1.0",
    "PyJWT>=2.13.0",
    "httpx>=0.25.0",
    "stripe>=8.0.0",
]

[project.scripts]
memory-bridge = "memory_bridge.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "prometheus-client>=0.19.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "postgres: mark test as requiring PostgreSQL (skipped if not available)",
]
